--- a/test/extensions/clusters/redis/BUILD
+++ b/test/extensions/clusters/redis/BUILD
@@ -121,3 +121,60 @@ envoy_cc_test(
     srcs = ["crc16_test.cc"],
     deps = ["//source/extensions/clusters/redis:crc16_lib"],
 )
+
+envoy_cc_test(
+    name = "twem_hash_test",
+    srcs = ["twem_hash_test.cc"],
+    deps = ["//source/extensions/clusters/redis:twem_hash_lib"],
+)
+
+envoy_extension_cc_test(
+    name = "twem_cluster_test",
+    srcs = ["twem_cluster_test.cc"],
+    extension_name = "envoy.clusters.redis",
+    deps = [
+        "//source/common/event:dispatcher_lib",
+        "//source/common/network:utility_lib",
+        "//source/common/upstream:upstream_lib",
+        "//source/extensions/transport_sockets/raw_buffer:config",
+        "//source/server:transport_socket_config_lib",
+        "//test/common/upstream:utility_lib",
+        "//test/extensions/clusters/redis:redis_cluster_mocks",
+        "//test/extensions/filters/network/common/redis:redis_mocks",
+        "//test/mocks:common_lib",
+        "//test/mocks/local_info:local_info_mocks",
+        "//test/mocks/network:network_mocks",
+        "//test/mocks/protobuf:protobuf_mocks",
+        "//test/mocks/runtime:runtime_mocks",
+        "//test/mocks/server:instance_mocks",
+        "//test/mocks/ssl:ssl_mocks",
+        "//test/mocks/thread_local:thread_local_mocks",
+        "//test/mocks/upstream:cluster_info_mocks",
+        "//test/mocks/upstream:cluster_manager_mocks",
+        "//test/test_common:utility_lib",
+        "@envoy_api//envoy/config/cluster/redis:pkg_cc_proto",
+        "@envoy_api//envoy/config/cluster/v3:pkg_cc_proto",
+        "@envoy_api//envoy/extensions/filters/network/redis_proxy/v3:pkg_cc_proto",
+    ],
+)
+
+envoy_extension_cc_test(
+    name = "twem_cluster_lb_test",
+    srcs = ["twem_cluster_lb_test.cc"],
+    extension_name = "envoy.clusters.redis",
+    deps = [
+        "//source/common/upstream:cluster_factory_lib",
+        "//source/common/upstream:thread_aware_lb_lib",
+        "//source/common/upstream:upstream_lib",
+        "//source/extensions/clusters/redis:twem_hash_lib",
+        "//test/common/upstream:utility_lib",
+        "//test/extensions/clusters/redis:redis_cluster_mocks",
+        "//test/mocks:common_lib",
+        "//test/mocks/server:server_mocks",
+        "//test/mocks/thread_local:thread_local_mocks",
+        "//test/mocks/upstream:cluster_info_mocks",
+        "//test/test_common:simulated_time_system_lib",
+        "//test/test_common:utility_lib",
+    ],
+)
+
