--- a/test/common/upstream/BUILD
+++ b/test/common/upstream/BUILD
@@ -125,6 +125,8 @@ envoy_cc_benchmark_binary(
         "//source/common/config:grpc_subscription_lib",
         "//source/common/config:protobuf_link_hacks",
         "//source/common/config:utility_lib",
+        "//source/common/config/unified_mux:grpc_mux_lib",
+        "//source/common/config/unified_mux:grpc_subscription_lib",
         "//source/common/upstream:eds_lib",
         "//source/extensions/transport_sockets/raw_buffer:config",
         "//source/server:transport_socket_config_lib",
