http3: changing how http3 is built, doing early config validation.
Signed-off-by: Alyssa Wilk <alyssar@chromium.org>

--- a/bazel/BUILD
+++ b/bazel/BUILD
@@ -286,6 +286,11 @@ config_setting(
 )
 
 config_setting(
+    name = "disable_http3",
+    values = {"define": "http3=disabled"},
+)
+
+config_setting(
     name = "disable_hot_restart",
     values = {"define": "hot_restart=disabled"},
 )
@@ -366,6 +371,7 @@ config_setting(
     values = {"define": "zlib=ng"},
 )
 
+# TODO(alyssawilk) what is this used for?
 config_setting(
     name = "enable_quiche",
     values = {"define": "quiche=enabled"},
