--- a/source/extensions/quic_listeners/quiche/BUILD
+++ b/source/extensions/quic_listeners/quiche/BUILD
@@ -382,12 +382,9 @@ envoy_cc_extension(
         "envoy.transport_sockets.downstream",
         "envoy.transport_sockets.upstream",
     ),
-    # Needed to verify that a quic specific configuration is used for quic transport socket.
-    extra_visibility = [
-        "//source/server:__subpackages__",
-    ],
     security_posture = "unknown",
     tags = ["nofips"],
+    visibility = ["//visibility:public"],
     deps = [
         "//include/envoy/network:transport_socket_interface",
         "//include/envoy/server:transport_socket_config_interface",
@@ -409,6 +406,7 @@ envoy_cc_extension(
     ),
     security_posture = "unknown",
     tags = ["nofips"],
+    visibility = ["//visibility:public"],
     # QUICHE can't build against FIPS BoringSSL until the FIPS build
     # is on a new enough version to have QUIC support. Remove it from
     # the build until then. Re-enable as part of #7433.
