--- a/test/common/http/BUILD
+++ b/test/common/http/BUILD
@@ -247,6 +247,7 @@ envoy_cc_test(
         "//source/common/runtime:runtime_lib",
         "//source/extensions/original_ip_detection/custom_header:custom_header_lib",
         "//source/extensions/original_ip_detection/xff:xff_lib",
+        "//source/extensions/request_id/uuid:config",
         "//test/mocks/http:http_mocks",
         "//test/mocks/local_info:local_info_mocks",
         "//test/mocks/network:network_mocks",
