--- a/tools/extensions/BUILD
+++ b/tools/extensions/BUILD
@@ -21,4 +21,5 @@ py_binary(
     name = "generate_extension_rst",
     srcs = ["generate_extension_rst.py"],
     data = [":generate_extension_db"],
+    visibility = ["//visibility:public"],
 )
