--- a/tools/type_whisperer/BUILD
+++ b/tools/type_whisperer/BUILD
@@ -77,6 +77,15 @@ file_descriptor_set_text(
     deps = ["@envoy_api_canonical//:all_protos"],
 )
 
+file_descriptor_set_text(
+    name = "all_protos_with_ext_pb_text_inc_source",
+    with_external_deps = True,
+    deps = [
+        "@envoy_api_canonical//:all_protos",
+        "//source:protos",
+    ],
+)
+
 proto_cc_source(
     name = "embedded_all_protos",
     constant = "AllProtosPbText",
