--- a/docs/root/intro/arch_overview/matching/_include/complicated.yaml
+++ b/docs/root/intro/arch_overview/matching/_include/complicated.yaml
@@ -11,51 +11,63 @@ static_resources:
         typed_config:
           "@type": type.googleapis.com/envoy.extensions.filters.network.http_connection_manager.v3.HttpConnectionManager
           stat_prefix: ingress_http
-          filters:
+          http_filters:
           - name: with-matcher
             typed_config:
               "@type": type.googleapis.com/envoy.extensions.common.matching.v3.ExtensionWithMatcher
               extension_config:
-                  name: response-filter-config
+                  name: envoy.filters.http.fault
                   typed_config:
-                      "@type": type.googleapis.com/test.integration.filters.SetResponseCodeFilterConfig
-                      code: 403
+                    "@type": type.googleapis.com/envoy.extensions.filters.http.fault.v3.HTTPFault
+                    abort:
+                      http_status: 503
+                      percentage:
+                        numerator: 0
+                        denominator: HUNDRED
+                    delay:
+                      fixed_delay: 3s
+                      percentage:
+                        numerator: 0
+                        denominator: HUNDRED
               matcher:
-                  matcher_tree:
-                      input:
-                          name: request-headers
-                          typed_config:
-                              "@type": type.googleapis.com/envoy.type.matcher.v3.HttpRequestHeaderMatchInput
-                              header_name: some-header
-                      exact_match_map:
-                          # Note this additional indirection; this is a workaround for Protobuf oneof limitations.
-                          map:
-                              skip_filter: # This is the header value we're trying to match against.
-                                  matcher_list:
-                                  matchers:
-                                  - predicate:
-                                      or_matcher:
-                                          predicate:
-                                          - single_predicate:
-                                              input:
-                                                  name: request-headers
-                                                  typed_config:
-                                                      "@type": type.googleapis.com/envoy.type.matcher.v3.HttpRequestHeaderMatchInput
-                                                      header_name: second-header
-                                              value_match:
-                                                  exact_match: foo
-                                          - single_predicate:
-                                              input:
-                                                  name: request-headers
-                                                  typed_config:
-                                                      "@type": type.googleapis.com/envoy.type.matcher.v3.HttpRequestHeaderMatchInput
-                                                      header_name: second-header
-                                              value_match:
-                                                  exact_match: bar
-                                      action:
-                                          name: skip
-                                          typed_config:
-                                              "@type": type.googleapis.com/envoy.extensions.filters.common.matcher.action.v3.SkipFilter
+                matcher_tree:
+                  input:
+                    name: request-headers
+                    typed_config:
+                      "@type": type.googleapis.com/envoy.type.matcher.v3.HttpRequestHeaderMatchInput
+                      header_name: some-header
+                  exact_match_map:
+                      # Note this additional indirection; this is a workaround for Protobuf oneof limitations.
+                      map:
+                        skip_filter: # This is the header value we're trying to match against.
+                          matcher:
+                            matcher_list:
+                              matchers:
+                              - predicate:
+                                  or_matcher:
+                                      predicate:
+                                      - single_predicate:
+                                          input:
+                                            name: request-headers
+                                            typed_config:
+                                              "@type": type.googleapis.com/envoy.type.matcher.v3.HttpRequestHeaderMatchInput
+                                              header_name: second-header
+                                          value_match:
+                                            exact: foo
+                                      - single_predicate:
+                                          input:
+                                            name: request-headers
+                                            typed_config:
+                                              "@type": type.googleapis.com/envoy.type.matcher.v3.HttpRequestHeaderMatchInput
+                                              header_name: second-header
+                                          value_match:
+                                            exact: bar
+                                on_match:
+                                  action:
+                                    name: skip
+                                    typed_config:
+                                      "@type": type.googleapis.com/envoy.extensions.filters.common.matcher.action.v3.SkipFilter
+          - name: envoy.filters.http.router
           route_config:
             virtual_hosts:
             - name: default
