--- a/docs/root/intro/arch_overview/matching/_include/simple.yaml
+++ b/docs/root/intro/arch_overview/matching/_include/simple.yaml
@@ -11,15 +11,24 @@ static_resources:
         typed_config:
           "@type": type.googleapis.com/envoy.extensions.filters.network.http_connection_manager.v3.HttpConnectionManager
           stat_prefix: ingress_http
-          filters:
+          http_filters:
           - name: with-matcher
             typed_config:
               "@type": type.googleapis.com/envoy.extensions.common.matching.v3.ExtensionWithMatcher
               extension_config:
-                  name: response-filter-config
+                  name: envoy.filters.http.fault
                   typed_config:
-                      "@type": type.googleapis.com/test.integration.filters.SetResponseCodeFilterConfig
-                      code: 403
+                    "@type": type.googleapis.com/envoy.extensions.filters.http.fault.v3.HTTPFault
+                    abort:
+                      http_status: 503
+                      percentage:
+                        numerator: 0
+                        denominator: HUNDRED
+                    delay:
+                      fixed_delay: 3s
+                      percentage:
+                        numerator: 0
+                        denominator: HUNDRED
               matcher:
                   matcher_tree:
                       input:
@@ -35,6 +44,7 @@ static_resources:
                                       name: skip
                                       typed_config:
                                           "@type": type.googleapis.com/envoy.extensions.filters.common.matcher.action.v3.SkipFilter
+          - name: envoy.filters.http.router
           route_config:
             virtual_hosts:
             - name: default
