bazel: Shift cve_scan to bazel
Signed-off-by: Ryan Northey <ryan@synca.io>

--- a/tools/dependency/BUILD
+++ b/tools/dependency/BUILD
@@ -22,3 +22,19 @@ py_binary(
         ":utils",
     ],
 )
+
+py_binary(
+    name = "cve_scan",
+    srcs = ["cve_scan.py"],
+    data = [
+        ":utils",
+    ],
+)
+
+py_binary(
+    name = "cve_scan_test",
+    srcs = ["cve_scan_test.py"],
+    data = [
+        ":cve_scan",
+    ],
+)
