--- a/examples/BUILD
+++ b/examples/BUILD
@@ -14,14 +14,30 @@ filegroup(
     ] + glob(
         [
             "**/*.yaml",
-            "**/*.lua",
-            "_extra_certs/*.pem",
         ],
         exclude = [
             "cache/responses.yaml",
             "dynamic-config-fs/**/*",
             "jaeger-native-tracing/*",
             "**/*docker-compose*.yaml",
+        ],
+    ),
+)
+
+filegroup(
+    name = "certs",
+    srcs = glob(
+        [
+            "_extra_certs/*.pem",
+        ],
+    ),
+)
+
+filegroup(
+    name = "lua",
+    srcs = glob(
+        [
+            "**/*.lua",
         ],
     ),
 )
