--- a/test/integration/filters/BUILD
+++ b/test/integration/filters/BUILD
@@ -182,6 +182,7 @@ envoy_cc_test_library(
         "//include/envoy/registry",
         "//source/common/network:connection_lib",
         "//source/extensions/filters/http/common:pass_through_filter_lib",
+        "//source/extensions/quic_listeners/quiche:quic_filter_manager_connection_lib",
         "//test/extensions/filters/http/common:empty_http_filter_config_lib",
     ],
 )
