--- a/test/extensions/filters/network/dubbo_proxy/BUILD
+++ b/test/extensions/filters/network/dubbo_proxy/BUILD
@@ -160,6 +160,32 @@ envoy_extension_cc_test(
 )
 
 envoy_extension_cc_test(
+    name = "heartbeat_response_test",
+    srcs = ["heartbeat_response_test.cc"],
+    extension_name = "envoy.filters.network.dubbo_proxy",
+    deps = [
+        ":mocks_lib",
+        ":utility_lib",
+        "//source/extensions/filters/network/dubbo_proxy:dubbo_protocol_impl_lib",
+        "//source/extensions/filters/network/dubbo_proxy:heartbeat_response_lib",
+        "//source/extensions/filters/network/dubbo_proxy:hessian_utils_lib",
+        "//source/extensions/filters/network/dubbo_proxy:metadata_lib",
+    ],
+)
+
+envoy_extension_cc_test(
+    name = "buffer_helper_test",
+    srcs = ["buffer_helper_test.cc"],
+    extension_name = "envoy.filters.network.dubbo_proxy",
+    deps = [
+        "//include/envoy/common:base_includes",
+        "//source/common/buffer:buffer_lib",
+        "//source/extensions/filters/network/dubbo_proxy:buffer_helper_lib",
+        "//test/test_common:utility_lib",
+    ],
+)
+
+envoy_extension_cc_test(
     name = "router_filter_config_test",
     srcs = ["router_filter_config_test.cc"],
     extension_name = "envoy.filters.network.dubbo_proxy",
