--- a/source/server/admin/BUILD
+++ b/source/server/admin/BUILD
@@ -35,7 +35,6 @@ envoy_cc_library(
         "//include/envoy/server:instance_interface",
         "//include/envoy/server:listener_manager_interface",
         "//include/envoy/server:options_interface",
-        "//source/common/access_log:access_log_lib",
         "//source/common/buffer:buffer_lib",
         "//source/common/common:assert_lib",
         "//source/common/common:basic_resource_lib",
@@ -61,7 +60,7 @@ envoy_cc_library(
         "//source/common/router:config_lib",
         "//source/common/router:scoped_config_lib",
         "//source/common/stats:isolated_store_lib",
-        "//source/extensions/access_loggers/file:file_access_log_lib",
+        # "//source/extensions/access_loggers/common:file_access_log_lib",
         "//source/extensions/request_id/uuid:config",
         "//source/server:listener_manager_lib",
     ],
