--- a/source/common/upstream/BUILD
+++ b/source/common/upstream/BUILD
@@ -340,8 +340,7 @@ envoy_cc_library(
     external_deps = ["abseil_synchronization"],
     deps = [
         ":load_balancer_lib",
-        "//source/common/config:metadata_lib",
-        "//source/common/config:well_known_names",
+        "//source/common/config:utility_lib",
         "@envoy_api//envoy/config/cluster/v3:pkg_cc_proto",
     ],
 )
