--- a/source/extensions/filters/network/dubbo_proxy/BUILD
+++ b/source/extensions/filters/network/dubbo_proxy/BUILD
@@ -10,17 +10,6 @@ licenses(["notice"])  # Apache 2
 envoy_extension_package()
 
 envoy_cc_library(
-    name = "buffer_helper_lib",
-    srcs = ["buffer_helper.cc"],
-    hdrs = ["buffer_helper.h"],
-    deps = [
-        "//source/common/buffer:buffer_lib",
-        "//source/common/common:assert_lib",
-        "//source/common/common:byte_order_lib",
-    ],
-)
-
-envoy_cc_library(
     name = "hessian_utils_lib",
     srcs = ["hessian_utils.cc"],
     hdrs = ["hessian_utils.h"],
@@ -29,7 +18,7 @@ envoy_cc_library(
         "hessian2_codec_object_codec_lib",
     ],
     deps = [
-        ":buffer_helper_lib",
+        "//include/envoy/buffer:buffer_interface",
         "//source/common/singleton:const_singleton",
     ],
 )
@@ -38,7 +27,6 @@ envoy_cc_library(
     name = "protocol_interface",
     hdrs = ["protocol.h"],
     deps = [
-        ":buffer_helper_lib",
         ":message_lib",
         ":metadata_lib",
         ":serializer_interface",
@@ -85,7 +73,6 @@ envoy_cc_library(
         "dubbo_hessian2_serializer_impl.h",
     ],
     deps = [
-        ":buffer_helper_lib",
         ":hessian_utils_lib",
         ":serializer_interface",
         "//source/common/singleton:const_singleton",
