rename flake8 target
Signed-off-by: Ryan Northey <ryan@synca.io>

--- a/tools/code_format/BUILD
+++ b/tools/code_format/BUILD
@@ -14,8 +14,8 @@ exports_files([
 ])
 
 py_binary(
-    name = "pylint",
-    srcs = ["pylint.py"],
+    name = "python_flake8",
+    srcs = ["python_flake8.py"],
     data = [":flake8.conf"],
     visibility = ["//visibility:public"],
     deps = [
