--- a/examples/udp/envoy.yaml
+++ b/examples/udp/envoy.yaml
@@ -1,10 +1,3 @@
-admin:
-  access_log_path: /tmp/admin_access.log
-  address:
-    socket_address:
-      protocol: TCP
-      address: 127.0.0.1
-      port_value: 9901
 static_resources:
   listeners:
   - name: listener_0
@@ -15,11 +8,12 @@ static_resources:
         address: 0.0.0.0
         port_value: 10000
     listener_filters:
-      name: envoy.filters.udp_listener.udp_proxy
+    - name: envoy.filters.udp_listener.udp_proxy
       typed_config:
         '@type': type.googleapis.com/envoy.extensions.filters.udp.udp_proxy.v3.UdpProxyConfig
         stat_prefix: service
         cluster: service_udp
+
   clusters:
   - name: service_udp
     connect_timeout: 0.25s
