--- a/source/extensions/access_loggers/stderror/BUILD
+++ b/source/extensions/access_loggers/stderror/BUILD
@@ -24,6 +24,7 @@ envoy_cc_extension(
         "//source/common/protobuf",
         "//source/extensions/access_loggers:well_known_names",
         "//source/extensions/access_loggers/common:file_access_log_lib",
+        "//source/extensions/access_loggers/common:stream_access_log_common_impl_lib",
         "@envoy_api//envoy/extensions/access_loggers/stderror/v3:pkg_cc_proto",
     ],
 )
