fix documentation in all protos
Signed-off-by: Sotiris Nanopoulos <sonanopo@microsoft.com>

--- a/source/extensions/access_loggers/common/BUILD
+++ b/source/extensions/access_loggers/common/BUILD
@@ -41,7 +41,7 @@ envoy_cc_library(
         "//source/common/config:config_provider_lib",
         "//source/common/formatter:substitution_format_string_lib",
         "//source/common/protobuf",
-        "//source/extensions/access_loggers/common:file_access_log_lib"
+        "//source/extensions/access_loggers/common:file_access_log_lib",
     ],
 )
 
