rename to common protocol inputs
Signed-off-by: Snow Pettersen <snowp@lyft.com>

--- a/source/extensions/matching/common_inputs/environment_variable/BUILD
+++ b/source/extensions/matching/common_inputs/environment_variable/BUILD
@@ -22,13 +22,13 @@ envoy_cc_extension(
     name = "config",
     srcs = ["config.cc"],
     hdrs = ["config.h"],
-    category = "envoy.matching.generic_inputs",
+    category = "envoy.matching.common_inputs",
     security_posture = "robust_to_untrusted_downstream",
     deps = [
         ":input_lib",
         "//include/envoy/matcher:matcher_interface",
         "//include/envoy/registry",
         "//include/envoy/server:factory_context_interface",
-        "@envoy_api//envoy/extensions/matching/generic_inputs/environment_variable/v3:pkg_cc_proto",
+        "@envoy_api//envoy/extensions/matching/common_inputs/environment_variable/v3:pkg_cc_proto",
     ],
 )
