--- a/bazel/BUILD
+++ b/bazel/BUILD
@@ -2,6 +2,7 @@ load("@rules_cc//cc:defs.bzl", "cc_library", "cc_proto_library")
 load("//bazel:envoy_build_system.bzl", "envoy_package")
 load("//bazel:envoy_internal.bzl", "envoy_select_force_libcpp")
 load("@bazel_skylib//lib:selects.bzl", "selects")
+load("@bazel_skylib//rules:common_settings.bzl", "bool_flag")
 
 licenses(["notice"])  # Apache 2
 
@@ -286,9 +287,16 @@ config_setting(
     values = {"define": "deprecated_features=disabled"},
 )
 
+bool_flag(
+    name = "http3",
+    build_setting_default = True,
+)
+
 config_setting(
     name = "disable_http3",
-    values = {"define": "http3=disabled"},
+    flag_values = {
+        ":http3": "False",
+        },
 )
 
 config_setting(
@@ -372,7 +380,6 @@ config_setting(
     values = {"define": "zlib=ng"},
 )
 
-# TODO(alyssawilk) what is this used for?
 config_setting(
     name = "enable_quiche",
     values = {"define": "quiche=enabled"},
