api: Introducing deprecated version annotation
Signed-off-by: Adi Suissa-Peleg <adip@google.com>

--- a/tools/api_versioning/BUILD
+++ b/tools/api_versioning/BUILD
@@ -1,4 +1,4 @@
-load("@rules_python//python:defs.bzl", "py_binary", "py_test")
+load("@rules_python//python:defs.bzl", "py_binary", "py_library", "py_test")
 load(
     "//bazel:envoy_build_system.bzl",
     "envoy_package",
@@ -8,6 +8,11 @@ licenses(["notice"])  # Apache 2
 
 envoy_package()
 
+py_library(
+    name = "utils",
+    srcs = ["utils.py"],
+)
+
 py_binary(
     name = "generate_api_version_header_bin",
     srcs = ["generate_api_version_header.py"],
@@ -15,6 +20,7 @@ py_binary(
     python_version = "PY3",
     srcs_version = "PY3",
     visibility = ["//visibility:public"],
+    deps = [":utils"],
 )
 
 py_test(
@@ -25,5 +31,6 @@ py_test(
     visibility = ["//visibility:public"],
     deps = [
         ":generate_api_version_header_bin",
+        ":utils",
     ],
 )
