initial fix for config test
Signed-off-by: davinci26 <sotirisnan@gmail.com>

--- a/examples/zipkin-tracing/service1-envoy-zipkin.yaml
+++ b/examples/zipkin-tracing/service1-envoy-zipkin.yaml
@@ -113,3 +113,13 @@ static_resources:
               socket_address:
                 address: zipkin
                 port_value: 9411
+admin:
+  access_log:
+  - name: envoy.access_loggers.stdoutput
+    typed_config:
+      "@type": type.googleapis.com/envoy.extensions.access_loggers.stdoutput.v3.StdoutputAccessLog
+  address:
+    socket_address:
+      protocol: TCP
+      address: 0.0.0.0
+      port_value: 19000
